# src/main/java/pl/codeconcept/e2d/e2dmasterdata/api/InstructorApiImpl.java
@@ -1,10 +1,10 @@
 package pl.codeconcept.e2d.e2dmasterdata.api;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import pl.codeconcept.e2d.e2dmasterdata.database.entity.UserEntity;
+import pl.codeconcept.e2d.e2dmasterdata.model.InstructorAndAuth;
 import pl.codeconcept.e2d.e2dmasterdata.service.masterdata.InstructorService;
 import pl.codeconcept.e2d.e2dmasterdata.model.Instructor;
 
@@ -18,9 +18,8 @@ public class InstructorApiImpl extends AbstractApi implements InstructorApi {
     private final InstructorService instructorService;
 
 
-
     @Override
-    public ResponseEntity<Instructor> createInstructor(@Valid Instructor body) {
+    public ResponseEntity<Instructor> createInstructor(@Valid InstructorAndAuth body) {
         UserEntity userEntity = getUserFromToken();
         return instructorService.saveInstructor(body, userEntity);
     }
@@ -28,7 +27,7 @@ public class InstructorApiImpl extends AbstractApi implements InstructorApi {
     @Override
     public ResponseEntity<Void> deleteInstructor(Long id) {
         UserEntity userEntity = getUserFromToken();
-        return instructorService.deleteInstructor(id,userEntity);
+        return instructorService.deleteInstructor(id, userEntity);
     }
 
     @Override
@@ -46,7 +45,7 @@ public class InstructorApiImpl extends AbstractApi implements InstructorApi {
     @Override
     public ResponseEntity<Instructor> updateInstructor(Long id, @Valid Instructor body) {
         UserEntity userEntity = getUserFromToken();
-        return instructorService.updateInstructor(id,body,userEntity);
+        return instructorService.updateInstructor(id, body, userEntity);
     }
 }
 
