# src/main/java/pl/codeconcept/e2d/e2dmasterdata/service/mappers/InstructorMapper.java
@@ -2,14 +2,15 @@ package pl.codeconcept.e2d.e2dmasterdata.service.mappers;
 
 import pl.codeconcept.e2d.e2dmasterdata.database.entity.InstructorEntity;
 import pl.codeconcept.e2d.e2dmasterdata.database.entity.SchoolEntity;
+import pl.codeconcept.e2d.e2dmasterdata.database.enums.UserType;
 import pl.codeconcept.e2d.e2dmasterdata.model.Instructor;
 
 public class InstructorMapper {
 
 
-    public static InstructorEntity mapToEntity(Instructor instructor, SchoolEntity schoolEntity) {
+    public static InstructorEntity mapToEntity(Instructor instructor, SchoolEntity schoolEntity, UserType userType,Long id) {
         InstructorEntity instructorEntity = new InstructorEntity();
-        instructorEntity.setUserEntity(UserMapper.mapToEntity(instructor.getUser(),instructor.getUser().getType()));
+        instructorEntity.setUserEntity(UserMapper.mapToEntity(instructor.getUser(),userType,id));
         instructorEntity.setSchool(schoolEntity);
         return instructorEntity;
     }
@@ -27,7 +28,6 @@ public class InstructorMapper {
         instructor.setSchoolId(instructorEntity.getSchool().getId());
         return instructor;
     }
-
 
     private static void mapToEntity(InstructorEntity instructorEntity, SchoolEntity schoolEntity) {
         instructorEntity.setSchool(schoolEntity);
